# MelodyMatch_AI

./: .gitignore  MelodyMatch_AI_.ipynb  README.md  app.py  bookmark_manager.py  bookmarks.json  data_processor.py  generate_synthetic_data.py  pyproject.toml  recommender.py  requirements.txt  srvdb_manager.py
