[project]
name = "PageTurner_AI"
version = "0.1.0"
description = "state-of-the-art music recommendation system powered by **SrvDB Vector Database**"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "streamlit==1.31.0",
    "srvdb==0.2.0",

    # Audio processing
    "librosa==0.10.1",
    "audioread==3.0.1",
    "soundfile==0.12.1",

    # Data processing
    "numpy==1.26.3",
    "pandas==2.2.0",
    "scipy==1.12.0",

    # Visualization
    "plotly==5.18.0",
    "matplotlib==3.8.2",

    # Additional audio features
    "pydub==0.25.1",
    "scikit-learn==1.4.0",

    # Optional: Music metadata
    "spotipy==2.23.0",  # For Spotify API integration
    "mutagen==1.47.0",  # For reading audio metadata

    # Progress bars
    "tqdm==4.66.1",

    # Utilities
    "requests==2.31.0",
    "python-dotenv==1.0.0"
]
